[package]
name = "pdbextract"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2021"

[dependencies]
pdb = "0.2.0"
thiserror = "1.0.30"
regex = "0.2"
once_cell = "1.9.0"
multimap = "0.4"
clap = { version = "3.1.2", features = ["derive"] }

[profile.release]
debug = true
debug-assertions = true
